--- a/main.css
+++ b/main.css
@@ -1,1 +1,115 @@
+#gs_kupon
+{
+    /*display:none; */
+}
+
+#loading {
+/*   position: fixed; */
+  display: block;
+  margin:auto;
+  width: 100%;
+  height: 100%;
+/*   top: 0; */
+/*   left: 0; */
+  text-align: center;
+  opacity: 0.7;
+  background-color: #fff;
+  z-index: 99;
+}
+
+#loading-image {
+/*   position: absolute; */
+/*   top: 100px; */
+/*   left: 240px; */
+  z-index: 100;
+}
+
+
+* {
+  margin: 0;
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+body {
+  background-color: #fafafa;
+  text-align: center;
+}
+
+.header-top {
+  height: 35px;
+  width: 100%;
+  background-color: #c0392b;
+  position: fixed;
+  z-index: 1;
+  color: #fff;
+  line-height: 35px;
+}
+
+.header {
+  height: 300px;
+  width: 100%;
+  position: fixed;
+  background-color: #e74c3c;
+}
+
+.gs_kupon {
+  top: 200px;
+  background-color: #eeeeee;
+  height: 245px;
+  width: 344px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  margin: 10px;
+  display: inline-block;
+  border-radius: 3px;
+  position: relative;
+}
+
+.gs_logo {
+  width: 344px;
+  height: 194px;
+  border-radius: 3px;
+  position: absolute;
+}
+
+.card-bottom {
+  width: 344px;
+  height: 51px;
+  background-color: #fafafa;
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
+  position: absolute;
+  bottom: 0
+}
+
+.gs_website , .gs_code {
+  line-height: 52px;
+  color: #737373;
+  float: left;
+  margin-left: 19px;
+}
+
+.card-bottom-icons {
+  line-height: 76px;
+  float: right;
+  margin-right: 19px;
+}
+
+/* Scrollbar */
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgba(236, 240, 241, 1.0);
+  border-left: 0px solid #2c3e50;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(192, 57, 43, 1.0);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #2c3e50;
+}
 
