--- a/main.css
+++ b/main.css
@@ -68,7 +68,7 @@ body {
   width: 344px;
   height: 194px;
   border-radius: 3px;
-  position: absolute;
+/*   position: absolute; */
 }
 
 .card-bottom {
