--- a/main.css
+++ b/main.css
@@ -34,7 +34,7 @@ body {
   background-color: #fafafa;
   text-align: center;
 }
-
+/*
 .header-top {
   height: 35px;
   width: 100%;
@@ -50,7 +50,7 @@ body {
   width: 100%;
   position: fixed;
   background-color: #e74c3c;
-}
+}*/
 
 .gs_kupon {
   top: 200px;
@@ -68,7 +68,7 @@ body {
   width: 344px;
   height: 194px;
   border-radius: 3px;
-/*   position: absolute; */
+/*  position: absolute;*/
 }
 
 .card-bottom {
@@ -83,7 +83,8 @@ body {
 
 .gs_website , .gs_code {
   line-height: 52px;
-  color: #737373;
+  color: red;
+  font-weight: 800;
   float: left;
   margin-left: 19px;
 }
@@ -93,23 +94,3 @@ body {
   float: right;
   margin-right: 19px;
 }
-
-/* Scrollbar */
-
-::-webkit-scrollbar {
-  width: 5px;
-}
-
-::-webkit-scrollbar-track {
-  background-color: rgba(236, 240, 241, 1.0);
-  border-left: 0px solid #2c3e50;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: rgba(192, 57, 43, 1.0);
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background-color: #2c3e50;
-}
-
