--- a/main.css
+++ b/main.css
@@ -55,7 +55,7 @@ body {
 .gs_kupon {
   top: 200px;
   background-color: #eeeeee;
-  height: 245px;
+/*   height: 245px; */
   width: 344px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   margin: 10px;
@@ -66,7 +66,7 @@ body {
 
 .gs_logo {
   width: 344px;
-  height: 194px;
+/*   height: 194px; */
   border-radius: 3px;
 /*  position: absolute;*/
 }
