--- a/main.css
+++ b/main.css
@@ -80,11 +80,11 @@ body {
   top: 200px;
   background-color: #eeeeee;
 /*   height: 245px; */
-  width: 344px;
+  width: 70%;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  margin: 10px;
+  margin: 1em;
   display: inline-block;
-  border-radius: 3px;
+  border-radius: 0.7em;
   position: relative;
 }
 
