--- a/main.css
+++ b/main.css
@@ -88,10 +88,10 @@ body {
   line-height: 52px;
   display: block ruby;
 }
+/*
 .gs_kupon {
   top: 200px;
   background-color: #eeeeee;
-/*   height: 245px; */
   width: 70%;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   margin: 1em;
@@ -99,6 +99,8 @@ body {
   border-radius: 0.7em;
   position: relative;
 }
+
+*/
 
 .gs_logo {
   width: 344px;
@@ -118,15 +120,49 @@ body {
 }
 
 .gs_website , .gs_code , .gs_link {
-  line-height: 52px;
   color: red;
   font-weight: 800;
   float: left;
-  margin-left: 19px;
+  margin-left: 2em;
 }
 
 .card-bottom-icons {
   line-height: 76px;
   float: right;
   margin-right: 19px;
+}
+
+.gs_kupon
+{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-gap: 0.5em;
+  background-color: #eeeeee;
+  width: 90%;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  margin: 1em;
+}
+
+.gs_logo,
+.gs_website,
+.gs_dates,
+.gs_type,
+.gs_code,
+.gs_category,
+.gs_block,
+.gs_link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1em;
+  text-align:center;
+}
+.gs_descr
+{
+  grid-column: 1 / 4; /* span from grid column line 1 to 3 (i.e., span 2 columns) */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1em;
 }
